syntax = "proto3";

service ProductsService {
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 productId = 1;
}

message ProductResponse {
  string productDetails = 1;
}